--- a/jupyter_notebooks/03 - Modelling and Evaluating.ipynb
+++ b/jupyter_notebooks/03 - Modelling and Evaluating.ipynb
@@ -1378,9 +1378,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 47,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "[main 143f3370]  Add new plots\n 3 files changed, 1446 insertions(+), 1341 deletions(-)\n rewrite jupyter_notebooks/03 - Modelling and Evaluating.ipynb (63%)\n create mode 100644 jupyter_notebooks/outputs/v1/evaluation.pkl\n create mode 100644 jupyter_notebooks/outputs/v1/malaria_detector_model.h5\n"
+        }
+      ],
       "source": [
         "!git commit -am \" Add new plots\""
       ]
@@ -1396,9 +1404,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 48,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "Enumerating objects: 11, done.\nCounting objects: 100% (11/11), done.\nDelta compression using up to 4 threads\nCompressing objects: 100% (6/6), done.\nWriting objects: 100% (8/8), 18.20 MiB | 9.54 MiB/s, done.\nTotal 8 (delta 2), reused 0 (delta 0), pack-reused 0\nremote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\nTo https://github.com/Huddy2022/WalkthroughProject01\n   cf8895b4..143f3370  main -> main\n"
+        }
+      ],
       "source": [
         "!git push"
       ]
